[package]
name = "srcpack"
version = "0.2.2"
edition = "2021"
authors = ["SurKaa <surkaa67@gmail.com>"]
description = "A fast CLI tool to pack source code into a zip file, respecting `.gitignore`."
license = "MIT OR Apache-2.0"
repository = "https://github.com/surkaa/srcpack"
readme = "README.md"
keywords = ["zip", "backup", "gitignore", "cli", "archiver"]
categories = ["command-line-utilities", "compression"]

# 定义库
[lib]
name = "srcpack"
path = "src/lib.rs"

# 定义二进制文件
[[bin]]
name = "srcpack"
path = "src/bin/main.rs"

[dependencies]
# 核心业务依赖
ignore = "=0.4.23"
zip = { version = "7", default-features = false, features = ["deflate-flate2-zlib-rs", "time"] }

# 命令行与工具依赖
clap = { version = "4.4", features = ["derive"] } # 命令行参数解析
anyhow = "1.0"          # 错误处理
indicatif = "0.17"      # 进度条

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
